@@ -785,6 +785,3 @@ ya que no abren el menu
 
 -menus en Beos se ven con un hueco en la barra de titulo donde estaria el boton de minimizar
 
--ventanas titulo en Beos:
-*las que estan en el fondo, le desaparecen bien los botones
-*pero al ir a menu F5-setting, esa ventana de fondo le aparecen los botones y con color activo
